add API call to home, shop and blogs page
